# Lidar_Raspberry_Pi

./: c2.md
cw1/: config-initramfs  config-rootfs  sprawozdanie.md
cw1/zadanie_domowe/1/: komenda uruchamiająca QEMU
cw1/zadanie_domowe/2/: komenda uruchamiająca QEMU  plik_konfiguracyjny_2
cw2/: buzzer.fzz  fritzing_schemat.fzz  gpio_in.py  gpio_led_1.py  gpio_led_2.py  gpio_servo.py  gpio_snd.py  servo.fzz  sprawozdanie.md
cw2/praca_domowa_okulus/: readme.txt  run.sh
cw2/praca_domowa_okulus/wave/: gpio_model.py  gpiomock.py  util.py  zm-czestotliwosc.py  zm-wypelnienie.py
cw3/: sprawozdanie.md
cw3/demo1_owrt_pkg/buggy/: Makefile
cw3/demo1_owrt_pkg/buggy/src/: Makefile
cw3/demo1_owrt_pkg/worms/: Makefile
projekt/: .gitignore  CMakeLists.txt  Makefile  schemat.fzz  sprawozdanie.md
projekt/client/: client.py
projekt/client/nadawca_serwer/: MakeFile
projekt/client/nadawca_serwer/src/: CMakeLists.txt  Server.cpp  Server.h  main.cpp
projekt/client/odbiorca_klient/: CMakeLists.txt  Client.h  main.cpp
projekt/openwrt-sdk-template/: .config  feeds.conf.default
projekt/server/: Makefile
projekt/server/src/: CMakeLists.txt  Server.h  Servo.h  main.cpp
projekt/server/src/VL53L0X/: CMakeLists.txt
projekt/test-client/: CMakeLists.txt  Client.h  main.cpp
projekt/zeromq/: client.cpp  server.cpp
